Add StackStress and DoubleOps